--- a/Style.css
+++ b/Style.css
@@ -282,19 +282,19 @@ nav{
 }
 
 .story-1{
-     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./Socialbook_img/status-1.png);
+     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./vacebookbook_img/status-1.png);
 }
 .story-2{
-     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./Socialbook_img/status-3.png);
+     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./vacebook_img/status-3.png);
 }
 .story-3{
-     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./Socialbook_img/status-2.png);
+     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./vacebook_img/status-2.png);
 }
 .story-4{
-     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./Socialbook_img/status-4.png);
+     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./vacebook_img/status-4.png);
 }
 .story-5{
-     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./Socialbook_img/female-2.jpg);
+     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url(./vacebook_img/female-2.jpg);
 }
 
 .story{
